syntax = "proto3";
package product;

option java_package = "com.example.grpc.inventory.stubs";
option java_multiple_files = true;

message Product {
    int64 id = 1;
    string name = 2;
    double price = 4;
}

message ListProductsRequest {
    int32 page = 1;
    int32 size = 2;
}

message ListProductsResponse {
    repeated Product products = 1;
}

service ProductService {
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}
